hphp/test/slow/finally/try_finally_004.php.expectf
Fatal error: A try statement requires a catch or a finally clause. in %s/try_finally_004.php on line 7
